[package]
name = "hyperbloom"
version = "0.1.0"
description = "Hyperborea-powered internet communications app"
authors = ["Nikita Podvirnyi <krypt0nn@vk.com>"]
homepage = "https://github.com/HyperboreaHQ/hyperborealib"
repository = "https://github.com/HyperboreaHQ/hyperborealib"
license = "GPL-3.0"
edition = "2021"

[dependencies.hyperelm]
git = "https://github.com/HyperboreaHQ/hyperelm"
features = ["full"]

[dependencies]
tokio = { version = "1.39", features = ["full"] }

ratatui = "0.27.0"
tui-textarea = "0.4.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
